non_executable_reasons_record_from_random_10k/7520.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
  mnist = tf.contrib.learn.datasets.load_dataset("mnist")
------------------

[0;36m  File [0;32m"<ipython-input-1-e1f867050674>"[0;36m, line [0;32m3[0m
[0;31m    mnist = tf.contrib.learn.datasets.load_dataset("mnist")[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unexpected indent

IndentationError: unexpected indent (<ipython-input-1-e1f867050674>, line 3)

Executability                            : False
